--- a/style.css
+++ b/style.css
@@ -52,17 +52,18 @@ html, body {
 
 .windows {
   position: absolute;
+  z-index: 3;
   left: 0;
   right: 0;
-  top: -150px;
+  top: -180px;
   bottom: 0;
   margin: auto;
   height: 0;
   width: 0;
-  border-top: 100px solid gray;
+  border-top: 100px solid #D6D6D6;
   border-left: 400px solid transparent;
   border-top-right-radius: 400px 100%;
-  rotate: 6deg;
+  rotate: 4deg;
 }
 
 .blackPart {
@@ -160,7 +161,8 @@ html, body {
   z-index: 2;
   bottom: -100px;
   top: 105px;
-  right: 135px;
+  right: 0;
+  left: 200px;
   margin: auto;
   rotate: -2deg;
   border-top-right-radius: 50%;
