--- a/style.scss
+++ b/style.scss
@@ -7,6 +7,8 @@ $waveColor: #b7b7b7;
 $whiteTopPart: #ededed;
 $whiteRightEngineSidePart: #e9e9e9;
 $whiteBackEngine: #e4e4e460;
+$mirrorLightColor: #F7F7F7;
+$mirrorDarkColor: #D6D6D6;
 
 html, body {
     margin: 0;
@@ -62,18 +64,19 @@ html, body {
 
 .windows {
     position: absolute;
+    z-index: 3;
     left: 0;
     right: 0;
-    top: -150px;
+    top: -180px;
     bottom: 0;
     margin: auto;
     height: 0;
     width: 0;
-    border-top: 100px solid gray;
+    border-top: 100px solid $mirrorDarkColor;
     border-left: 400px solid transparent;
     // border-right: 300px solid transparent;
     border-top-right-radius: 400px 100%;
-    rotate: 6deg;
+    rotate: 4deg;
 }
 
 .blackPart {
@@ -172,7 +175,8 @@ html, body {
     z-index: 2;
     bottom: -100px;
     top: 105px;
-    right: 135px;
+    right: 0;
+    left: 200px;
     margin: auto;
     rotate: -2deg;
     border-top-right-radius: 50%;
