--- a/style.css
+++ b/style.css
@@ -85,6 +85,16 @@ html, body {
   border-bottom-left-radius: 30%;
   background-color: #7B7F82;
 }
+.windows > .frontWindow {
+  position: absolute;
+  left: -536px;
+  top: -131px;
+  z-index: 3;
+  width: 244px;
+  height: 130px;
+  background: linear-gradient(to left, rgba(46, 134, 193, 0.5411764706), rgba(82, 149, 193, 0.541), rgba(46, 134, 193, 0.5411764706));
+  transform: rotateY(81deg) rotateX(313deg) skewX(332deg) rotateZ(5deg);
+}
 
 .blackPart {
   position: absolute;
