--- a/style.scss
+++ b/style.scss
@@ -67,12 +67,12 @@ html, body {
     }
 }
 
-.windows {
+.facingWindows {
     position: absolute;
     z-index: 4;
     left: 0;
     right: 0;
-    top: -200px;
+    top: -168px;
     bottom: 0;
     margin: auto;
     height: 0;
@@ -103,13 +103,48 @@ html, body {
     }
     &>.frontWindow {
         position: absolute;
-        left: -536px;
-        top: -131px;
+        left: -609px;
+        top: -140px;
         z-index: 3;
-        width: 244px;
+        width: 395px;
         height: 130px;
         background: linear-gradient(to left, $mirrorBackground,rgba(82, 149, 193, 0.541), $mirrorBackground);
-        transform:rotateY(81deg) rotateX(313deg) skewX(332deg) rotateZ(5deg);
+        transform:rotateY(81deg) rotateX(313deg) skewX(332deg) rotateZ(7deg);
+    }
+}
+.backWindow {
+    position: absolute;
+    z-index: 4;
+    left: -32px;
+    right: 0;
+    top: -235px;
+    bottom: 0;
+    margin: auto;
+    height: 0;
+    width: 0;
+    border-left: 350px solid $mirrorBackground;
+    border-top: 100px solid transparent;
+    rotate: 4deg;
+    &::before {
+        content: '';
+        position: absolute;
+        left: -470px;
+        top: -100px;
+        border-bottom-left-radius: 100% 30%;
+        border-right: 120px solid $mirrorBackground;
+        border-top: 100px solid transparent;
+    }
+    &::after {
+        content: '';
+        position: absolute;
+        left: -405px;
+        top: -125px;
+        height: 133px;
+        width: 4px;
+        rotate: 50deg;
+        border-top-left-radius: 30%;
+        border-bottom-left-radius: 30%;
+        background-color: $mirrorBoundary;
     }
 }
 
